Imported 0.1.2R2 from CVS

--- a/ircx.conf
+++ b/ircx.conf
@@ -8,10 +8,10 @@
 ###################################### 
 
 #M:<server-address>:<server-name>:<server-description>:<main port>
-M:localhost:Your Server:Your New ignitionServer Installation:6667
+M:silentsoftlan.servebeer.com:ignitionServer:Where will Microsoft try to drag you today? Do you really want to go there?:6667
 
 #A:<location>:<name>:<e-mail>
-A:Generic Internet Access:Administrator:administrator@localhost
+A:Generic Internet Access:Keith Gable:ziggy@ignition-project.com
 
 #S:MaxConn:MaxClones:MaxChans:NickLen:TopicLen:KickLen:PartLen:KeyLen:QuitLen:MaxWhoLen:MaxListLen:MaxMsgsInQueue
 #in any field, 0 means no-limit
@@ -25,13 +25,14 @@ S:0:0:0:32:150:150:150:10:150:200:10:0
 
 # Y:ID:Ping:FloodControl:MaxClients:SendQ
 # 0 = disable
-Y:1:10:0:1000:400000
+Y:10:0:0:100:300000
+Y:100:100:0:10000:500000
 
 # I:<IP-address-mask>:<optional password>:<domain-mask>::<optional connection class>
-I:*::*::1
+I:*::*::100
 
 #O:<hostname>:<password>:<username>:<operator-flags>:<connection-class>
-O:localhost:admin:admin:osixkrRDCcKB:1
+O:*:admin:admin:osixkreRDCcKB:10
 
 #K:Mask:Message:*
 
@@ -46,21 +47,34 @@ Q::Reserved for operators:IRCop
 
 #Z:*:Please do not use this server!:*
 
-#P-Line: additional ports to run on
-#P:<accept-addresses>:*:*:<port>
-#note: I'm pretty sure the *'s actually have a specific use, but I don't think that pure
-#used it. look at the source for more info.
-P:127.0.0.1:*:*:6668
-P:192.168.0.1:*:*:6669
-
-#U/H lines: I don't think these are even used - might be
-U:Services.LocalHost.Net:*:*
-H:*::Services.LocalHost.Net
+#P-Line: *STRUCTURE CHANGE*
+# NEW STRUCTURE:
+#P:<Unused>:<BindIP>:<Unused>:<PortOptions>:<Port>
+P::127.0.0.1::*:6668
+P::192.168.0.1::*:6669
+P::127.0.0.1::*:5698
 
 #V-line: Vitrual Host
 #Use with /vhost <user> <pass>
 #V:<vhost>:<user>:<pass>:<hostmask>
 V:admin.localhost:admin:admin:*@localhost
 
-#X:<die-pass>:<restart-pass>
-X:die:restart
+#X:SECTION:PARAMETERS
+X:DIEPASS:die
+X:RESTARTPASS:restart
+
+
+#DIE - Comment Out, Delete or set to any non "1" number
+X:DIE:0
+
+#OFFLINE MODE - Set to 1 to enable - 0 to disable.
+#X:OFFLINEMODE:1
+
+#OFFLINE MESSAGE - Message to use when killing during Offline Mode
+X:OFFLINEMESSAGE:This server is offline. Sorry.
+
+#CNOTICE - Custom Auth Notice... Custom Message to send to connecting users.
+X:CNOTICE:Welcome to your NEW ignitionServer installation. You should change this line to say something else.
+
+C:127.0.0.1:nopwd:services.silentsoftlan.servebeer.com:6667:100
+N:127.0.0.1:nopwd:services.silentsoftlan.servebeer.com::100
