Imported 0.2.1 from CVS

--- a/ircx.conf
+++ b/ircx.conf
@@ -6,9 +6,11 @@
 # unless you are sure you know what  #
 # you're doing                       #
 ###################################### 
+# $Id: ircx.conf,v 1.4 2004/05/28 20:20:52 ziggythehamster Exp $
 
 #M:<server-address>:<server-name>:<server-description>:<main port>
-M:silentsoftlan.servebeer.com:ignitionServer:Where will Microsoft try to drag you today? Do you really want to go there?:6667
+#here is where you put some witty description for your server.
+M:ignition.servebeer.com:ignitionServer:IRCXpro - $300. Exchange - $1500. ignitionServer - Priceless.:6667
 
 #A:<location>:<name>:<e-mail>
 A:Generic Internet Access:Keith Gable:ziggy@ignition-project.com
@@ -16,7 +18,8 @@ A:Generic Internet Access:Keith Gable:ziggy@ignition-project.com
 #S:MaxConn:MaxClones:MaxChans:NickLen:TopicLen:KickLen:PartLen:KeyLen:QuitLen:MaxWhoLen:MaxListLen:MaxMsgsInQueue
 #in any field, 0 means no-limit
 #some do not yet apply
-S:0:0:0:32:150:150:150:10:150:200:10:0
+#NOTE: MaxListLen should always be "0" unless you are 100% sure you want to hide rooms!
+S:1024:5:0:32:150:150:150:10:150:200:0:0
 
 # class number, ping frequency (in seconds),
 # connect frequency (in seconds), maximum number of links (used for
@@ -24,15 +27,27 @@ S:0:0:0:32:150:150:150:10:150:200:10:0
 # and sendq
 
 # Y:ID:Ping:FloodControl:MaxClients:SendQ
+# (floodcontrol: max. number of clients from the class that can connect at a time)
 # 0 = disable
-Y:10:0:0:100:300000
+Y:10:100:0:100:1000000
 Y:100:100:0:10000:500000
 
 # I:<IP-address-mask>:<optional password>:<domain-mask>::<optional connection class>
 I:*::*::100
 
 #O:<hostname>:<password>:<username>:<operator-flags>:<connection-class>
-O:*:admin:admin:osixkreRDCcKB:10
+#NEW INSTALLATIONS: PASS IS "admin"
+#Use included PassCrypt to generate passwords or log on to your server
+#and type /passcrypt MD5 password (replace password with your desired password)
+
+#NOTE: Encrypted passwords only encrypt the passwords on disk -- /oper'ing is
+#still the same (/oper user pass).. And when opering, you do NOT use the encrypted
+#password (in the default case, you'd still go /oper admin admin).
+O:*@localhost:21232f297a57a5a743894a0e4a801fc3:admin:oOsixkreRDCcKBbE:10
+
+#test server goof accounts
+O:*:eef12607db71f73690ab06cdbbe675d1:digi:osixkrcbB:10
+O:*:6f87b9d54db08dde117839a9273e13b0:airwalk:osixkrcbB:10
 
 #K:Mask:Message:*
 
@@ -44,6 +59,9 @@ Q::Reserved for services:OperServ
 Q::Reserved for services:HelpServ
 Q::Reserved for operators:DALnet
 Q::Reserved for operators:IRCop
+Q::Reserved for operators:Sysop*
+Q::Reserved for operators:Admin*
+Q::Reserved for operators:HelpOp*
 
 #Z:*:Please do not use this server!:*
 
@@ -57,7 +75,9 @@ P::127.0.0.1::*:5698
 #V-line: Vitrual Host
 #Use with /vhost <user> <pass>
 #V:<vhost>:<user>:<pass>:<hostmask>
-V:admin.localhost:admin:admin:*@localhost
+
+#NEW INSTALLATIONS: PASS IS "admin"
+V:admin.localhost:admin:21232f297a57a5a743894a0e4a801fc3:*@localhost
 
 #X:SECTION:PARAMETERS
 X:DIEPASS:die
@@ -68,7 +88,7 @@ X:RESTARTPASS:restart
 X:DIE:0
 
 #OFFLINE MODE - Set to 1 to enable - 0 to disable.
-#X:OFFLINEMODE:1
+X:OFFLINEMODE:0
 
 #OFFLINE MESSAGE - Message to use when killing during Offline Mode
 X:OFFLINEMESSAGE:This server is offline. Sorry.
@@ -76,5 +96,35 @@ X:OFFLINEMESSAGE:This server is offline. Sorry.
 #CNOTICE - Custom Auth Notice... Custom Message to send to connecting users.
 X:CNOTICE:Welcome to your NEW ignitionServer installation. You should change this line to say something else.
 
-C:127.0.0.1:nopwd:services.silentsoftlan.servebeer.com:6667:100
-N:127.0.0.1:nopwd:services.silentsoftlan.servebeer.com::100
+#MASKDNS - Provides security for your users by masking their DNS
+#Options
+#0 - No Mask
+#1 - MD5 Sum Mask(of DNS)
+#2 - HostName Mask(X:HOSTMASK) Must be set otherwise it will use DNS Option
+X:MASKDNS:2
+
+#HOSTMASK - Used for MASKDNS(option 2). Users will get mask of <NickName>.<HOSTMASK> e.g. DigiGuy.Users.ignition-project.com
+X:HOSTMASK:Users.ignition-project.com
+
+#SERVERLOCATION - Lets you specify where the server is located (many times this is the same as the admin location.. however, this could be more generalized [like Oklahoma, US])
+X:SERVERLOCATION:Unique Location, The World
+
+#CRYPT - PassWord encryption (Set to "0" for None or "MD5" for MD5 encryption, use /passcrypt or ignitionServer PassCrypt to generate password...
+X:CRYPT:MD5
+
+X:REMOTEPASS:098f6bcd4621d373cade4e832627b4f6
+
+#ALLOWMULTIPLE - Allow multiple instances of ignitionServer; ADVANCED FEATURE! Only set to 1 if you know what you're doing.
+#notes: You should not set this to 1 unless you are wanting to run more than one copy of ignitionServer on the same machine. Additionally, the monitor
+#       will not function as expected when this is on. Again, it is an ADVANCED FEATURE and is only designed for system administrators who know what they're doing.
+#       (you could use this to bind different servers to different interfaces and essentially serve infinite servers on infinite IPs.. if you were a web host
+#       for example)
+X:ALLOWMULTIPLE:0
+
+#Link Lines
+#Note: X:CRYPT has no effect on the password here.
+#L:IP:Pass:Hostname:Port:Class
+L:127.0.0.1:nopwd:services.ignition.servebeer.com:6667:100
+L:144.139.43.102:1234:AU.X9CHAT.NET:6667:100
+#OPER(test) ADDED BY DigiGuy(localhost)
+O:*:93f725a07423fe1c889f448b33d21f46:test:ko:10
