Import 0.2.3 from CVS

--- a/ircx.conf
+++ b/ircx.conf
@@ -5,11 +5,18 @@
 # Do not play with stuff in here     #
 # unless you are sure you know what  #
 # you're doing                       #
-###################################### 
-# $Id: ircx.conf,v 1.5 2004/05/28 20:35:04 ziggythehamster Exp $
+######################################
+
+# ignitionServer 0.2.3 Configuration File
+
+################################################### 
+# $Id: ircx.conf,v 1.6 2004/05/28 21:27:34 ziggythehamster Exp $ 
+###################################################
 
 #M:<server-address>:<server-name>:<server-description>:<main port>
-#here is where you put some witty description for your server.
+#here is where you put some witty description for your server. We use our
+#MasterCard joke by default, but you could put a quote, the location/name 
+#of your server, etc.
 M:ignition.servebeer.com:ignitionServer:IRCXpro - $300. Exchange - $1500. ignitionServer - Priceless.:6667
 
 #A:<location>:<name>:<e-mail>
@@ -29,10 +36,15 @@ S:1024:5:0:32:150:150:150:10:150:200:0:0
 # Y:ID:Ping:FloodControl:MaxClients:SendQ
 # (floodcontrol: max. number of clients from the class that can connect at a time)
 # 0 = disable
-Y:10:100:0:100:1000000
-Y:100:100:0:10000:500000
+# the ping time is generally 180
+Y:10:180:0:100:1000000
+Y:100:180:0:10000:500000
 
 # I:<IP-address-mask>:<optional password>:<domain-mask>::<optional connection class>
+# WARNING! DO NOT CHANGE THIS LINE UNLESS YOU ABSOLUTELY, POSITIVELY KNOW WHAT YOU ARE DOING!
+# CHANGING THIS GENERIC INVITE (I:) LINE MAY CAUSE YOUR SERVER TO BE UNABLE TO ACCEPT INCOMING
+# CONNECTIONS! AGAIN, DO NOT CHANGE THIS UNLESS YOU KNOW WHAT YOU ARE DOING!
+# Example: I:*:aolsucks:*aol.com::100 - require a password for all AOL users
 I:*::*::100
 
 #O:<hostname>:<password>:<username>:<operator-flags>:<connection-class>
@@ -43,12 +55,14 @@ I:*::*::100
 #NOTE: Encrypted passwords only encrypt the passwords on disk -- /oper'ing is
 #still the same (/oper user pass).. And when opering, you do NOT use the encrypted
 #password (in the default case, you'd still go /oper admin admin).
-O:*@localhost:21232f297a57a5a743894a0e4a801fc3:admin:oOsixkreRDCcKBbE:10
+O:*@localhost:21232f297a57a5a743894a0e4a801fc3:admin:oOsixkreRDCcKBbEP:10
+O:*@localhost:21232f297a57a5a743894a0e4a801fc3:admin2:oOsixkreRDCcKBbEp:10
 
 #test server goof accounts
 O:*:eef12607db71f73690ab06cdbbe675d1:digi:osixkrcbB:10
 O:*:6f87b9d54db08dde117839a9273e13b0:airwalk:osixkrcbB:10
 
+#Kill Lines
 #K:Mask:Message:*
 
 #Q::Message:Nickname
@@ -63,6 +77,7 @@ Q::Reserved for operators:Sysop*
 Q::Reserved for operators:Admin*
 Q::Reserved for operators:HelpOp*
 
+#Z lines -- connection filters
 #Z:*:Please do not use this server!:*
 
 #P-Line: *STRUCTURE CHANGE*
@@ -79,12 +94,31 @@ P::127.0.0.1::*:5698
 #NEW INSTALLATIONS: PASS IS "admin"
 V:admin.localhost:admin:21232f297a57a5a743894a0e4a801fc3:*@localhost
 
-#X:SECTION:PARAMETERS
+#Link Lines
+#Note: X:CRYPT has no effect on the password here.
+#L:IP:Pass:Hostname:Port:Class
+L:127.0.0.1:nopwd:services.ignition.servebeer.com:6667:100
+
+#############################################################################################################
+# eXtended Configuration Section                                                                            #
+#############################################################################################################
+
+#-#-------------------------------------------------------------------------------------------------------#-#
+#-# Note about eXtended Configuration Lines (X: lines): X: lines were created so we could have a simpler  #-#
+#-# way to define extra features without cramming them on one line or using all of the letters (or worse, #-#
+#-# using a C-style configuration). The basic format of the X: line is:                                   #-#
+#-# X:SECTION:PARAMETERS:PARAMETERS:... and so on. Most commands only have X:SECTION:PARAMETER and it's   #-#
+#-# only 0 or 1.                                                                                          #-#
+#-#-------------------------------------------------------------------------------------------------------#-#
+
+#/die and /restart passwords
 X:DIEPASS:die
 X:RESTARTPASS:restart
 
+#********************************** ATTENTION! IF YOU ARE GETTING "SERVER MISCONFIGURED", CHANGE THE 1 TO A 0!
 
 #DIE - Comment Out, Delete or set to any non "1" number
+#(this is to force you to configure your server!)
 X:DIE:0
 
 #OFFLINE MODE - Set to 1 to enable - 0 to disable.
@@ -98,10 +132,19 @@ X:CNOTICE:Welcome to your NEW ignitionServer installation. You should change thi
 
 #MASKDNS - Provides security for your users by masking their DNS
 #Options
-#0 - No Mask
-#1 - MD5 Sum Mask(of DNS)
-#2 - HostName Mask(X:HOSTMASK) Must be set otherwise it will use DNS Option
+#0 - No Mask (default)
+#1 - MD5 Sum Mask (of DNS)
+#2 - HostName Mask (X:HOSTMASK) Must be set otherwise it will use "no mask" option
 X:MASKDNS:2
+
+#HIGHPROT & LOWPROT - Selects mode to be set on join for opers with P(High Prot) or p(Low Prot)
+#Options
+#Q - Auto Set +q on-oper-join
+#O - Auto set +o on-oper-join
+#V - Auto set +v on-oper-join
+#NORM - No mode set on-oper-join
+X:HIGHPROT:V
+X:LOWPROT:V
 
 #HOSTMASK - Used for MASKDNS(option 2). Users will get mask of <NickName>.<HOSTMASK> e.g. DigiGuy.Users.ignition-project.com
 X:HOSTMASK:Users.ignition-project.com
@@ -112,6 +155,7 @@ X:SERVERLOCATION:Unique Location, The World
 #CRYPT - PassWord encryption (Set to "0" for None or "MD5" for MD5 encryption, use /passcrypt or ignitionServer PassCrypt to generate password...
 X:CRYPT:MD5
 
+#REMOTEPASS - Remote administration password -- coming soon :)
 X:REMOTEPASS:098f6bcd4621d373cade4e832627b4f6
 
 #ALLOWMULTIPLE - Allow multiple instances of ignitionServer; ADVANCED FEATURE! Only set to 1 if you know what you're doing.
@@ -121,10 +165,8 @@ X:REMOTEPASS:098f6bcd4621d373cade4e832627b4f6
 #       for example)
 X:ALLOWMULTIPLE:0
 
-#Link Lines
-#Note: X:CRYPT has no effect on the password here.
-#L:IP:Pass:Hostname:Port:Class
-L:127.0.0.1:nopwd:services.ignition.servebeer.com:6667:100
-L:144.139.43.102:1234:AU.X9CHAT.NET:6667:100
-#OPER(test) ADDED BY DigiGuy(localhost)
-O:*:93f725a07423fe1c889f448b33d21f46:test:ko:10
+#GAGMODE
+# 0 - Do not show the user getting gagged that they are getting gagged (IRCX defined method)
+# 1 - Show the user getting gagged they are getting gagged
+# 2 - Do not show the user getting gagged and do not bounce messages (the user will not see any messages bounce and will likely blame it on the server)
+X:GAGMODE:0
