Import 0.3.2 from CVS

--- a/ircx.conf
+++ b/ircx.conf
@@ -12,7 +12,7 @@
 # Lines that begin with # are comments and IGNORED by ignitionServer!
 
 ################################################### 
-# $Id: ircx.conf,v 1.13 2004/06/06 21:51:20 airwalklogik Exp $ 
+# $Id: ircx.conf,v 1.23 2004/07/02 23:20:02 ziggythehamster Exp $ 
 ###################################################
 
 #############################################################################################################
@@ -20,14 +20,22 @@
 #############################################################################################################
 
 #[ M: Lines - Server Information ]##########################################
-# M:<server address>:<server name>:<server description>:<main port>        #
+# M:<server address>:<server name>:<server description>:<bind address>:    #
+#   <main port>                                                            #
 ############################################################################
 # Here is where you put some witty description for your server. We use our #
 # MasterCard joke by default, but you could put a quote, the location/name #
 # of your server, etc. You also have to put the basic server info here too #
 ############################################################################
+# Bind address is the address of the adapter to bind to. To bind to all    #
+# adapters (normal behavior), use *. This should only be changed if you    #
+# need to run ignitionServer on a specific adapter only (if, for example,  #
+# your server runs in a shared environment, or your version of Windows for #
+# some reason doesn't allow you to bind to all adapters). If you don't     #
+# even know what an adapter is, perhaps you should just leave it as *. :)  #
+############################################################################
 
-M:localhost:ignitionServer:IRCXpro - $300. Exchange - $1500. ignitionServer - Priceless.:6667
+M:localhost:ignitionServer:IRCXpro - $300. Exchange - $1500. ignitionServer - Priceless.:*:6667
 
 #[ A: Lines - Administrative Information ]##################################
 # A:<location>:<name>:<e-mail>                                             #
@@ -113,8 +121,38 @@ I:*::*::100
 # DO NOT FORGET! CHANGE THE DEFAULT PASSWORD FROM "admin" TO SOMETHING     #
 # ELSE! YOUR SERVER **WILL** BE COMPROMISED IF YOU FAIL TO DO THIS!        #
 ############################################################################
+# NEW! You don't have to include a lot of modes now! Here's the simplified #
+# list:                                                                    #
+#    N - Network Administrator (NOocekbBKCRDWH)                            #
+#    O - Global Operator (OocekbBKCW)                                      #
+#    o - Local Operator (ocekbB)                                           #
+#                                                                          #
+# In addition, you may want to add the following modes:                    #
+#    s - Gets Server Messages (good idea)                                  #
+#    w - Gets Wallops (good idea)                                          #
+#    P - Is High Protected (see X:HIGHPROT)                                #
+#    p - Is Low Protected (see X:LOWPROT)                                  #
+#                                                                          #
+# The following modes may or may not be automatically given to a specific  #
+# oper level (for security reasons), but are given automatically to some   #
+# oper levels:                                                             #
+#    W - Can send WallOps (automatic for global oper and netadmin, unless  #
+#        mode expansion is off [then it's netadmin only])                  #
+#    H - Can /chghost and /chgnick (automatic for netadmin)                #
+#                                                                          #
+# Of course, you can always stick with the old long list of modes, if you  #
+# like (or if you want to customize a particular user's privledges). To do #
+# this, prefix the list of modes with a dash (-). For example, to make a   #
+# user a local operator only, their O: line might look like this:          #
+# O:*:password:user:-o:10. The - simply tells ignitionServer to switch off #
+# mode expansion.                                                          #
+############################################################################
+# Please note: NetAdmin gets access to some really powerful commands, so   #
+# do NOT just copy and paste the default modes from the default O: line    #
+# for the rest of your opers!                                              #
+############################################################################
 
-O:*@localhost:21232f297a57a5a743894a0e4a801fc3:admin:oOsixkreRDCcKBbEP:10
+O:*@localhost:21232f297a57a5a743894a0e4a801fc3:admin:NPs:10
 
 #[ V: Lines - Virtual Hostname Lines ]######################################
 # V:<Virtual Host>:<Username>:<Password>:<Host Mask>                       #
@@ -319,3 +357,8 @@ X:REGCHANMODE:0
 # 0 - Disable the error log (not reccommended)
 # 1 - Enable the error log (only logs fatal exceptions and regular errors; reccommended)
 X:ERRORLOG:1
+
+#AUTOVHOST - Automatically give operators VHosts if a VHost exists with the same username and password as the oper
+# 0 - Disable AutoVHost
+# 1 - Enable AutoVHost (if a VHost doesn't exist for a particular operator, they won't get a VHost)
+X:AUTOVHOST:1
