Import 0.3.3 from CVS

--- a/ircx.conf
+++ b/ircx.conf
@@ -8,11 +8,11 @@
 # ignitionServer!                    #
 ######################################
 
-# ignitionServer 0.3.1 Configuration File
+# ignitionServer 0.3.3 Configuration File
 # Lines that begin with # are comments and IGNORED by ignitionServer!
 
 ################################################### 
-# $Id: ircx.conf,v 1.23 2004/07/02 23:20:02 ziggythehamster Exp $ 
+# $Id: ircx.conf,v 1.27 2004/07/25 01:36:34 ziggythehamster Exp $ 
 ###################################################
 
 #############################################################################################################
@@ -48,8 +48,9 @@ M:localhost:ignitionServer:IRCXpro - $300. Exchange - $1500. ignitionServer - Pr
 A:Some Location, Earth:George Jetson:admin@localhost
 
 #[ S: Lines - Security Settings ]###########################################
-# S:<MaxConn>:<MaxClones>:<MaxChans>:<NickLen>:<TopicLen>:<KickLen>:       #
-#   <PartLen>:<KeyLen>:<QuitLen>:<MaxWhoLen>:<MaxListLen>:<MaxMsgsInQueue> #
+# S:<MaxConn>:<MaxClones>:<MaxChansPerUser>:<NickLen>:<TopicLen>:          #
+#   <KickLen>:<PartLen>:<KeyLen>:<QuitLen>:<MaxWhoLen>:<MaxListLen>:       #
+#   <MaxMsgsInQueue>                                                       #
 ############################################################################
 # The security line sets limits to the length of certian strings and       #
 # replies. Some do not yet apply. In any field, 0 means "infinite".        #
@@ -57,7 +58,7 @@ A:Some Location, Earth:George Jetson:admin@localhost
 # to hide rooms!                                                           #
 ############################################################################
 
-S:1024:5:0:32:150:150:150:10:150:200:0:0
+S:1024:5:10:32:150:150:150:10:150:200:0:0
 
 #[ Y: Lines - Client Class Settings ]#######################################
 # Y:<ID>:<PingTime>:<FloodControl>:<MaxClients>:<SendQ>                    #
