Import 0.3.6 from CVS

--- a/ircx.conf
+++ b/ircx.conf
@@ -8,11 +8,13 @@
 # ignitionServer!                    #
 ######################################
 
-# ignitionServer 0.3.5 Configuration File
+# ignitionServer 0.3.6 Configuration File
 # Lines that begin with # are comments and IGNORED by ignitionServer!
+# TODO:
+# - format X: lines like everything else
 
 ################################################### 
-# $Id: ircx.conf,v 1.47 2004/10/09 23:09:05 ziggythehamster Exp $ 
+# $Id: ircx.conf,v 1.54 2004/12/07 00:51:13 ziggythehamster Exp $ 
 ###################################################
 
 ############[ NOTICE ]############
@@ -285,6 +287,9 @@ Q::Reserved for operators:HelpOp*
 #     N:127.0.0.1:1234:services.localhost::100                             #
 ############################################################################
 
+C:127.0.0.1:1234:services.localhost:6667:100
+N:127.0.0.1:1234:services.localhost::100
+
 #[ B: Lines - Bounce To Server ]############################################
 # B:<Host Mask>:<Message>:<Server Name>:<Port>:                            #
 ############################################################################
@@ -448,10 +453,20 @@ X:MONITORIP:127.0.0.1
 #  X:STATICCHAN:#Lobby:1
 #  X:STATICCHAN:#Test:0
 # Static channels should be used sparingly, because they aren't as dynamic as regular channels. Static channels do not have
-# owners/hosts/voices, but owners who have lowprot/highprot get whatever mode is associated with lowprot/highprot. For example,
+# owners/hosts/voices, but opers who have lowprot/highprot get whatever mode is associated with lowprot/highprot. For example,
 # if X:HIGHPROT: is set to Q, opers with +P will be an owner in a static channel. Basically, static channels are for channels
 # that you want to be mainly oper-controlled, and that you optionally want to be joined when people connect. A good use for static
 # channels are lobby channels.
 
+#LOGGING - Configure what stuff is logged
+# 0 - (default) log nothing
+# 1 - Log channel conversations
+# 2 - Log channel conversations and whispers
+# 3 - Log channel conversations, channel whispers, and private messages
+# WARNING: IT MAY BE ILLEGAL IN YOUR STATE OR COUNTRY
+# TO LOG CHATS. PLEASE CONSULT A LEGAL ADVISOR BEFORE
+# ENABLING THIS FEATURE.
+# NOTE: Only conversations and JOIN/PART/KICK are logged at this time.
+X:LOGGING:0
 
 # Congratulations! You're done!
