- Fixed bug #23 (can set modes that don't exist with + or - sign) - Add stuff to ignore list.

--- a/ircx.conf
+++ b/ircx.conf
@@ -49,7 +49,7 @@
 # even know what an adapter is, perhaps you should just leave it as *. :)  #
 ############################################################################
 
-M:ignition.servebeer.com:Ziggy's Test Server:IRCXpro - $300. Exchange - $1500. ignitionServer - Priceless.:*:6667
+M:ignition.servebeer.com:Ziggy's Test Server:IRCXpro - $300. Exchange - $1500. ignitionServer - Priceless.:127.0.0.1:6667
 
 #[ A: Lines - Administrative Information ]##################################
 # A:<location>:<name>:<e-mail>                                             #
